[package]
name = "ton-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.4" }
ctr = { version = "0.9.2" }
ed25519 = { version = "2.2.3" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = { version = "0.8.5" }
reqwest = { version = "0.11.24" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
sha256 = { version = "1.5.0" }
tokio = { version = "1.36.0", features = ["rt", "macros", "net"] }
